# pose-fall-detection-eldercare

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
configs/: ctrgcn.yaml
core/eldercare/: __init__.py  alarm.py  features.py  heuristic.py  metrics.py  schema.py  synthetic.py
core/eldercare/pose/: __init__.py
core/eldercare/temporal/: __init__.py
data/: prepare.py
docs/: PRIVACY.md  RESEARCH.md
edge/: run.py
eval/: cross_dataset.py  reconstruction_attack.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  SkeletonCanvas.tsx  index.css  useDashboardSocket.ts
frontend/src/lib/: skeleton.ts
report/: Eldercare_Fall_Detection_Report.docx  README.md  build_docx.py
report/diagrams/: diagrams.md
report/figures/: generate_figures.py
report/network/: architecture_spec.md  reference_model.py  reference_model_numpy.py  training_methodology.md
report/paper/: IEEE_manuscript.md
report/pose-fall-detection-eldcare/: Eldercare_Fall_Detection_Report_final.docx
report/tables/: results_tables.md
tests/: test_smoke.py
train/: export_onnx.py  train_ctrgcn.py
